--- a/newSchema/allele.yaml
+++ b/newSchema/allele.yaml
@@ -23,7 +23,7 @@ links:
     - outbound
     multiplicity:
     - has_one
-    association: true
+    backref: gene
 - rel: effects
   href: effect/{id}
   templateRequired:
@@ -37,7 +37,7 @@ links:
     - outbound
     multiplicity:
     - has_one
-    association: true
+    backref: allele
 - rel: transcript
   href: transcript/{id}
   templateRequired:
@@ -51,7 +51,7 @@ links:
     - outbound
     multiplicity:
     - has_one
-    association: true
+    backref: transcript
 - rel: protein
   href: protein/{id}
   templateRequired:
@@ -65,7 +65,7 @@ links:
     - outbound
     multiplicity:
     - has_one
-    association: true
+    backref: allele
 properties:
   id:
     type: string
