--- a/newSchema/interaction.yaml
+++ b/newSchema/interaction.yaml
@@ -53,7 +53,7 @@ links:
     - outbound
     multiplicity:
     - has_one
-    association: true
+    backref: protein
 properties:
   source:
     type: string
