Going to have to rework this. At least the sifter scripts and schemas should be good

--- a/newSchema/allele_effect.yaml
+++ b/newSchema/allele_effect.yaml
@@ -2,35 +2,7 @@ $schema: https://json-schema.org/draft/2020-12/schema
 $id: allele_effect
 title: AlleleEffect
 type: object
-links:
-- rel: ensembl_gene
-  href: ensemblgene/{id}
-  templateRequired:
-  - id
-  targetSchema:
-    $ref: gene.yaml
-  templatePointers:
-    id: /ensembl_gene/-/id
-  targetHints:
-    directionality:
-    - outbound
-    multiplicity:
-    - has_one
-    backref: gene
-- rel: ensembl_transcript
-  href: ensembltranscript/{id}
-  templateRequired:
-  - id
-  targetSchema:
-    $ref: transcript.yaml
-  templatePointers:
-    id: /ensembl_transcript/-/id
-  targetHints:
-    directionality:
-    - outbound
-    multiplicity:
-    - has_one
-    backref: transcript
+links: []
 properties:
   id:
     type: string
@@ -50,23 +22,23 @@ properties:
     type: integer
   cdna_length:
     type: integer
+  exon_rank:
+    type: string
   hgnc_id:
     type: string
   hgvsc:
     type: string
   hgvsp:
     type: string
+  uniprot_domain:
+    type: string
+  uniprot_location:
+    type: string
+  num_transcripts:
+    type: number
+  percent_transcripts_affected:
+    type: number
   hugo_symbol:
     type: string
   biotype:
     type: string
-  ensembl_gene:
-    type:
-    - array
-    items:
-      $ref: reference.yaml
-  ensembl_transcript:
-    type:
-    - array
-    items:
-      $ref: reference.yaml
