added amino acids to allele effect

--- a/newSchema/allele_effect.yaml
+++ b/newSchema/allele_effect.yaml
@@ -2,7 +2,35 @@ $schema: https://json-schema.org/draft/2020-12/schema
 $id: allele_effect
 title: AlleleEffect
 type: object
-links: []
+links:
+- rel: ensembl_gene
+  href: ensemblgene/{id}
+  templateRequired:
+  - id
+  targetSchema:
+    $ref: gene.yaml
+  templatePointers:
+    id: /ensembl_gene/-/id
+  targetHints:
+    directionality:
+    - outbound
+    multiplicity:
+    - has_one
+    backref: gene
+- rel: ensembl_transcript
+  href: ensembltranscript/{id}
+  templateRequired:
+  - id
+  targetSchema:
+    $ref: transcript.yaml
+  templatePointers:
+    id: /ensembl_transcript/-/id
+  targetHints:
+    directionality:
+    - outbound
+    multiplicity:
+    - has_one
+    backref: transcript
 properties:
   id:
     type: string
@@ -14,6 +42,10 @@ properties:
     type: integer
   aa_length:
     type: integer
+  aa_ref:
+    type: string
+  aa_var:
+    type: string
   cds_position:
     type: integer
   cds_length:
@@ -42,3 +74,13 @@ properties:
     type: string
   biotype:
     type: string
+  ensembl_gene:
+    type:
+    - array
+    items:
+      $ref: reference.yaml
+  ensembl_transcript:
+    type:
+    - array
+    items:
+      $ref: reference.yaml
