--- a/newSchema/compound.yaml
+++ b/newSchema/compound.yaml
@@ -93,10 +93,6 @@ properties:
     - array
   similar_compounds:
     type:
-    - 'null'
-    - array
-  projects:
-    type:
     - array
     items:
       $ref: reference.yaml
@@ -112,3 +108,8 @@ properties:
     $ref: _definitions.yaml#/datetime
   updated_datetime:
     $ref: _definitions.yaml#/datetime
+  projects:
+    type:
+    - array
+    items:
+      $ref: reference.yaml
