--- a/newSchema/allele.yaml
+++ b/newSchema/allele.yaml
@@ -9,7 +9,63 @@ required:
 - genome
 - reference_bases
 - alternate_bases
-links: []
+links:
+- rel: gene
+  href: gene/{id}
+  templateRequired:
+  - id
+  targetSchema:
+    $ref: gene.yaml
+  templatePointers:
+    id: /gene/-/id
+  targetHints:
+    directionality:
+    - outbound
+    multiplicity:
+    - has_one
+    backref: gene
+- rel: effects
+  href: effect/{id}
+  templateRequired:
+  - id
+  targetSchema:
+    $ref: allele_effect.yaml
+  templatePointers:
+    id: /effects/-/id
+  targetHints:
+    directionality:
+    - outbound
+    multiplicity:
+    - has_one
+    backref: allele
+- rel: transcript
+  href: transcript/{id}
+  templateRequired:
+  - id
+  targetSchema:
+    $ref: transcript.yaml
+  templatePointers:
+    id: /transcript/-/id
+  targetHints:
+    directionality:
+    - outbound
+    multiplicity:
+    - has_one
+    backref: transcript
+- rel: protein
+  href: protein/{id}
+  templateRequired:
+  - id
+  targetSchema:
+    $ref: protein.yaml
+  templatePointers:
+    id: /protein/-/id
+  targetHints:
+    directionality:
+    - outbound
+    multiplicity:
+    - has_one
+    backref: allele
 properties:
   id:
     type: string
@@ -41,3 +97,23 @@ properties:
     $ref: _definitions.yaml#/datetime
   updated_datetime:
     $ref: _definitions.yaml#/datetime
+  gene:
+    type:
+    - array
+    items:
+      $ref: reference.yaml
+  effects:
+    type:
+    - array
+    items:
+      $ref: reference.yaml
+  transcript:
+    type:
+    - array
+    items:
+      $ref: reference.yaml
+  protein:
+    type:
+    - array
+    items:
+      $ref: reference.yaml
