--- a/newSchema/pathway.yaml
+++ b/newSchema/pathway.yaml
@@ -52,12 +52,38 @@ links:
     multiplicity:
     - has_many
     backref: pathways
+- rel: publications
+  href: publication/{id}
+  templateRequired:
+  - id
+  targetSchema:
+    $ref: publication.yaml
+  templatePointers:
+    id: /publications/-/id
+  targetHints:
+    directionality:
+    - outbound
+    multiplicity:
+    - has_one
+    backref: pathways
 properties:
   id:
     type: string
     systemAlias: node_id
   name:
     type: string
+  project_id:
+    $ref: _definitions.yaml#/project_id
+  submitter_id:
+    type:
+    - string
+    - 'null'
+  type:
+    type: string
+  created_datetime:
+    $ref: _definitions.yaml#/datetime
+  updated_datetime:
+    $ref: _definitions.yaml#/datetime
   genes:
     type:
     - array
@@ -73,15 +99,8 @@ properties:
     - array
     items:
       $ref: reference.yaml
-  project_id:
-    $ref: _definitions.yaml#/project_id
-  submitter_id:
+  publications:
     type:
-    - string
-    - 'null'
-  type:
-    type: string
-  created_datetime:
-    $ref: _definitions.yaml#/datetime
-  updated_datetime:
-    $ref: _definitions.yaml#/datetime
+    - array
+    items:
+      $ref: reference.yaml
