--- a/normalize/allele/annotate_transform.yaml
+++ b/normalize/allele/annotate_transform.yaml
@@ -52,18 +52,31 @@ pipelines:
                 if t[0] == 'ANN':
                   for n, i in enumerate(a):
                     b = dict(zip(ANN_header, i.split("|")))
+                    b["impact"] = b["Annotation_Impact"]
+                    b["annotation"] =  b["Annotation"]
                     if b['Feature_Type'] == 'CUSTOM&unipDomain':
-                      b['uniProtDomain'] = b['Feature_ID']
+                      b['uniprot_domain'] = b['Feature_ID']
+                    elif b['Feature_Type'] == 'CUSTOM&unipLocCytopl':
+                      b['uniprot_location'] = b['Feature_ID']
+                    elif b['Feature_Type'] == 'CUSTOM&unipLocExtra':
+                      b['uniprot_location'] = b['Feature_ID']
+                    elif b['Feature_Type'] == 'CUSTOM&unipLocTransMemb':
+                      b['uniprot_location'] = b['Feature_ID']
+                    elif b['Feature_Type'] == 'CUSTOM&unipLocSignal':
+                      b['uniprot_location'] = b['Feature_ID']
                     else:
                       b["hgvsc"] = b["HGVS.c"]
                       b["hgvsp"] = b["HGVS.p"]
+                      if len(b['hgvsp']):
+                        b['aa_ref'] = b['hgvsp'][2:5]
+                        b['aa_var'] = b['hgvsp'][-3:]
                       b["biotype"] = b["Transcript_BioType"]
-                      b["impact"] = b["Annotation_Impact"]
-                      b["annotation"] =  b["Annotation"]
                       b["hugo_symbol"] = b["Gene_Name"]
                       b["ensembl_gene"] = b["Gene_ID"]
                       if b["Feature_Type"] == "transcript":
                         b["ensembl_transcript"] = b["Feature_ID"].split(".")[0]
+                      if len(b['Rank']):
+                        b['exon_rank'] = b['Rank']
                       aa = b["AA.pos / AA.length"]
                       if len(aa):
                         aa_pos, aa_len = aa.split("/")
@@ -83,9 +96,11 @@ pipelines:
                     o.append(b)
                 elif t[0] in ['NMD', 'LOF']:
                   for n, i in enumerate(a):
-                    b = dict(zip(NMD_header, i.split("|")))
-                    b["num_transcripts"] = b["Number_of_transcripts_in_gene"]
-                    b["percent_transcripts_affected"] = b["Percent_of_transcripts_affected"]
+                    b = dict(zip(NMD_header, i[1:-1].split("|")))
+                    b["hugo_symbol"] = b["Gene_Name"]
+                    b["ensembl_gene"] = b["Gene_ID"]
+                    b["num_transcripts"] = int(b["Number_of_transcripts_in_gene"])
+                    b["percent_transcripts_affected"] = float(b["Percent_of_transcripts_affected"])
                     b['id'] = row['id'] + '/' + t[0] + '/' + str(n)
                     o.append(b)
             row["effects"] = o
