Added detail to g2p transform (response_type)

--- a/transform/g2p/transform.yaml
+++ b/transform/g2p/transform.yaml
@@ -61,6 +61,8 @@ pipelines:
               row["description"] = row["association"]["description"]
               if "drug_labels" in row["association"]:
                 row["compounds"] = [ { "id" : row["association"]["drug_labels"] } ]
+                if 'response_type' in row["association"]:
+                  row["response_type"] = row['association']['response_type']
             row["submitter_id"] = row["text_object"]["id"]
             row["project_id"] = row["source"]
             g = []
